--- a/GettingStarted--ImageGeneration.ipynb
+++ b/GettingStarted--ImageGeneration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "50cc7831",
+   "id": "3f173f46",
    "metadata": {},
    "source": [
     "# Getting started with OpenAI Python API for Image Generation\n",
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dcb00dbc",
+   "execution_count": 1,
+   "id": "69cd2b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3b27faa4",
+   "execution_count": 2,
+   "id": "bd510dda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,16 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0aeb72ab",
+   "execution_count": 8,
+   "id": "0192dcc5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "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\n"
+     ]
+    }
+   ],
    "source": [
     "## configurations: go to your openai account to generate a KEY!\n",
     "## Note: there is a better way to do this...but this way is easy.\n",
     "\n",
     "## put your YOUR_API_KEY here (use ref [5] link to get your api key)\n",
-    "## Note: you need to create a openai account to use this api.\n",
+    "## Note: you need to create a openaiaccount to use this api.\n",
     "## Go to beta.opanai.com, and make an account.\n",
     "## Then generate a private api key (DO NOT SHARE THIS)\n",
     "\n",
@@ -74,10 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31a80eca",
+   "execution_count": 9,
+   "id": "cbc97af3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "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\n"
+     ]
+    }
+   ],
    "source": [
     "oai.api_key = mykey\n",
     "print(oai.api_key)"
@@ -85,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "767a11a8",
+   "id": "04c011c1",
    "metadata": {},
    "source": [
     "## Notes on the parameters:\n",
@@ -103,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "96cd1c11",
+   "execution_count": 10,
+   "id": "1f0dd226",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,10 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a2d0daf",
+   "execution_count": 11,
+   "id": "d40cb034",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ImagesGenerated/cats-with-hats/1670920851434410.png\n"
+     ]
+    }
+   ],
    "source": [
     "## prepare to save image to the ImagesGenerated folder.\n",
     "images_generated = \"ImagesGenerated/\"\n",
@@ -152,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26dc5988",
+   "execution_count": 12,
+   "id": "4d0424e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +188,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a40ba8e1",
+   "id": "664b636e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "754a37e2",
    "metadata": {},
    "outputs": [],
    "source": []
