--- a/GettingStarted--TextCompletion.ipynb
+++ b/GettingStarted--TextCompletion.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "67fda199",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e83ce65a",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "ea714520",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "3c2b418c",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "aacfe50f",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "f5674a37",
    "metadata": {
     "scrolled": false
@@ -207,13 +207,17 @@
      "text": [
       "Write an essay on me\n",
       "\n",
-      "My name is Kevin, and I'm an aspiring programmer with a passion for creating something new. Growing up, I was always the one tinkering around in the computer lab at school or helping my friends figure out how to install the latest game. As I grew older, this curiosity became more focused on programming, so it wasn't long before I found myself enrolled in college to major in computer science. \n",
+      "As I look back on my life and where I am today, there is much to be proud of. Growing up in a small town in Pennsylvania instilled in me values that have helped to shape who I am today. From a young age, my parents taught me the importance of hard work and never giving up even when faced with challenges. These traits have served me well throughout life as they allowed me to remain focused and goal-oriented when striving for success.\n",
       "\n",
-      "Through my college years, I gained invaluable experience building software solutions for real-world problems as part of internships as well as hackathons. My skillset has grown to include HTML5 & CSS3 web development; C# Windows application development; iOS mobile app development with Objective-C & Swift; server side programming & database management with .NET Core & SQL Server; and cloud computing technologies such as Azure Web Services & Amazon Web Services (AWS). With each new project that comes my way, there's an opportunity for me to learn something new and expand my knowledge base even further - which is an exciting prospect indeed! \n",
+      "My personality has also been shaped by many experiences throughout my life; from being an active member of various clubs during high school and college, participating in several sports teams, traveling abroad for research projects or teaching English overseas – all these events helped form who I am today. My experiences have equipped me with the ability to think outside the box, be creative during problem solving situations, while remaining professional no matter what situation arises. \n",
       "\n",
-      "Aside from being a programmer - when not working on some pet project or studying various algorithms - you can find me playing video games online or watching sports on TV (Go Wolves!). Programming isn't just a job to me but also a passion which makes coming into work that much more enjoyable every day! When not writing code at home or researching emerging technologies at work – reading books like ‘Dune’ by Frank Herbert remains one of my go-to activities when relaxing during downtime. Ultimately though whenever possible – going out into nature whether it’s camping overnight up north near Minnesota’s Boundary Waters Lakes region or simply fishing down south along the Mississippi River brings peace of mind while also unwinding after long days coding away! \n",
-      " \n",
-      "To sum it all up: passionate about technology coupled with natural problem solving prowess best summarize who this self-taught programmer holistically speaking is today!\n"
+      "I’ve always been passionate about education both inside and outside of classrooms; whether it was volunteering at summer camps or tutoring elementary school students math - developing relationships with others by opening their eyes to different perspectives remains one of the most rewarding aspects of learning that drives me daily. \n",
+      "\n",
+      "My greatest strength comes through working with others as it allows us collectively to push boundaries beyond our individual potentials which yields more sustainable results rooted within collaboration rather than competition. In addition, innovation within this process helps unlock creative solutions leading toward development opportunities that may not have occurred monolithically- thus producing advantageous outcomes for whoever may benefit from them . Therefore working together truly is better than solely attempting initial success individually . \n",
+      "\n",
+      " All these qualities combined demonstrate how diverse yet intertwined elements serve together through pushing boundaries entrenched into achieving goals essential for growing , evolving ,and succeeding !\n",
+      "\n",
+      "Overall, these attributes will continue shaping my future as I pursue initiatives driven towards helping others succeed regardless if its academically or professionally related endeavors – allowing people from all backgrounds grow either personally/professionally!\n"
      ]
     }
    ],
@@ -224,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "e02cf2e3",
    "metadata": {},
    "outputs": [
@@ -232,7 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TextGenerated/write-an-essay-on-climate-change/focus-on-plastic-in-the-ocean//1670918035325350.txt\n"
+      "TextGenerated/write-an-essay-on-me/1670923727933092.txt\n"
      ]
     }
    ],
@@ -258,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "7a98947b",
    "metadata": {},
    "outputs": [],
