added tolerance (limit) to the number of characters in the save paths

--- a/GettingStarted--ImageGeneration.ipynb
+++ b/GettingStarted--ImageGeneration.ipynb
@@ -64,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -119,13 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "1f0dd226",
    "metadata": {},
    "outputs": [],
    "source": [
     "### generate images ###\n",
-    "image_prompt = \"Cats with hats\"\n",
+    "image_prompt = \"christmas lights display. On a big house\"\n",
     "\n",
     "possible_sizes = ['256x256', '512x512', '1024x1024']\n",
     "\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "id": "d40cb034",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ImagesGenerated/cats-with-hats/1670923710421563.png\n"
+      "ImagesGenerated/christmas-lights-display/on-a-big-house/1670972806804167.png\n"
      ]
     }
    ],
@@ -158,9 +158,12 @@
     "## prepare to save image to the ImagesGenerated folder.\n",
     "images_generated = \"ImagesGenerated/\"\n",
     "\n",
+    "# to pruning the prompt name for saving\n",
+    "tolerence = 250 \n",
+    "\n",
     "## folder name is the prompt text with \"-\" in place of spaces\n",
     "## each period makes a new chain in the directory path\n",
-    "save_folder = image_prompt.lower().replace(\" \", \"-\").replace(\".-\", \"/\").replace(\".\", \"/\") + \"/\"\n",
+    "save_folder = image_prompt[:tolerence].lower().replace(\" \", \"-\").replace(\".-\", \"/\").replace(\".\", \"/\") + \"/\"\n",
     "\n",
     "## specific image name is the current time in micro seconds (ms)\n",
     "file_name = str(round(time()*1e6)) + \".png\"\n",
@@ -176,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "id": "4d0424e1",
    "metadata": {},
    "outputs": [],
@@ -197,6 +200,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "754a37e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6bb2e98",
    "metadata": {},
    "outputs": [],
    "source": []
