--- a/GettingStarted--TextCompletion.ipynb
+++ b/GettingStarted--TextCompletion.ipynb
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -207,17 +207,13 @@
      "text": [
       "Write an essay on me\n",
       "\n",
-      "As I look back on my life and where I am today, there is much to be proud of. Growing up in a small town in Pennsylvania instilled in me values that have helped to shape who I am today. From a young age, my parents taught me the importance of hard work and never giving up even when faced with challenges. These traits have served me well throughout life as they allowed me to remain focused and goal-oriented when striving for success.\n",
+      "My name is Annie and I'm a student at a local community college. I have always had a passion for learning and that's why I choose to pursue higher education. In my free time, you'll often find me outside in nature appreciating the beauty around me or reading a good book. The topics of my books tend to focus on self-development, psychology, and relationships - something which has been very helpful in furthering my own personal growth.\n",
       "\n",
-      "My personality has also been shaped by many experiences throughout my life; from being an active member of various clubs during high school and college, participating in several sports teams, traveling abroad for research projects or teaching English overseas – all these events helped form who I am today. My experiences have equipped me with the ability to think outside the box, be creative during problem solving situations, while remaining professional no matter what situation arises. \n",
+      "I am an advocate for healthy living, both mentally and physically. This commitment came from realizing the power within oneself when striving for balance in life - something that wasn't so natural for me as I was growing up with depression and anxiety. But with time comes healing; now more than ever before, I am passionate about helping others to learn how to take care of their mental health too by publishing posts on Instagram about it regularly as well as offering online counseling sessions through social media videos and live streams once every month - all while still continuing to take care of myself too! \n",
       "\n",
-      "I’ve always been passionate about education both inside and outside of classrooms; whether it was volunteering at summer camps or tutoring elementary school students math - developing relationships with others by opening their eyes to different perspectives remains one of the most rewarding aspects of learning that drives me daily. \n",
+      "Sports have also been an integral part of keeping myself emotionally balanced since childhood days; specifically running track & field has taught me essential lessons such as setting goals & pushing through the hurdles associated with reaching them successfully no matter what is thrown your way (literally). This discipline has also provided opportunities outside competition internally during college since joining various leadership roles related to sports organizations on campus (e.g., being president of the Track & Field Club). \n",
       "\n",
-      "My greatest strength comes through working with others as it allows us collectively to push boundaries beyond our individual potentials which yields more sustainable results rooted within collaboration rather than competition. In addition, innovation within this process helps unlock creative solutions leading toward development opportunities that may not have occurred monolithically- thus producing advantageous outcomes for whoever may benefit from them . Therefore working together truly is better than solely attempting initial success individually . \n",
-      "\n",
-      " All these qualities combined demonstrate how diverse yet intertwined elements serve together through pushing boundaries entrenched into achieving goals essential for growing , evolving ,and succeeding !\n",
-      "\n",
-      "Overall, these attributes will continue shaping my future as I pursue initiatives driven towards helping others succeed regardless if its academically or professionally related endeavors – allowing people from all backgrounds grow either personally/professionally!\n"
+      "Ultimately, being active helps maintain strength inside but also outwards which ultimately gives me energy overall which leads back into achieving academic excellence - something that holds considerable value especially in this day&age due largely supported by hard work throughout high school encouraging proficient skillsets such as extensive research projects related biology attaining knowledge-based mastery along quality discussion-oriented essay writing desired from higher education institutions like mine currently enrolled at today!\n"
      ]
     }
    ],
@@ -236,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TextGenerated/write-an-essay-on-me/1670923727933092.txt\n"
+      "TextGenerated/write-an-essay-on-me/1670971163574475.txt\n"
      ]
     }
    ],
@@ -244,9 +240,12 @@
     "## prepare to save image to the ImagesGenerated folder.\n",
     "text_generated = \"TextGenerated/\"\n",
     "\n",
+    "# to pruning the prompt name for saving\n",
+    "tolerence = 250 \n",
+    "\n",
     "## folder name is the prompt text with \"-\" in place of spaces\n",
     "## each period makes a new chain in the directory path\n",
-    "save_folder = text_prompt.lower().replace(\" \", \"-\").replace(\".-\", \"/\").replace(\".\", \"/\") + \"/\"\n",
+    "save_folder = text_prompt[:tolerence].lower().replace(\" \", \"-\").replace(\".-\", \"/\").replace(\".\", \"/\") + \"/\"\n",
     "\n",
     "## specific image name is the current time in micro seconds (ms)\n",
     "file_name = str(round(time()*1e6)) + \".txt\"\n",
