--- a/GettingStarted--TextCompletion.ipynb
+++ b/GettingStarted--TextCompletion.ipynb
@@ -19,6 +19,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d44df259",
+   "metadata": {},
+   "source": [
+    "## Note: This Text Completion tool can also generate code!!!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "38ee6250",
@@ -166,13 +174,20 @@
     "- are you alive?\n",
     "- Would an ai as smart and capable as you be alive? Be honest.\n",
     "- Which insects is the best and why? please provide an essay style argument.\n",
+    "\n",
+    "\n",
     "- factor a cubic polynomial. Show your work.\n",
-    "- plot a polynomial of degree 4 with 2 real roots"
+    "- plot a polynomial of degree 4 with 2 real roots\n",
+    "\n",
+    "\n",
+    "\n",
+    "- Write a recursive algorithm that effieicently computes a general bellman equation. Write your code in Python \n",
+    "- Write a program that takes in a string of text, and classify the text as positive, negative, or neutral. Use the machine learning python libraries like Tensorflow, pytorch, or sk-learn to write a RNN that accomplishes this task. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "aacfe50f",
    "metadata": {},
    "outputs": [],
@@ -180,7 +195,7 @@
     "### generating text!!! ###\n",
     "\n",
     "## the prompt text <str>\n",
-    "text_prompt = \"Write an essay on me\"\n",
+    "text_prompt = \"Write a program that takes in a string of text, and classify the text as positive, negative, or neutral. Use the machine learning python libraries like Tensorflow, pytorch, or sk-learn to write a RNN that accomplishes this task. \"\n",
     "## runs the prompt text through the AI\n",
     "response = oai.Completion.create(model=\"text-davinci-003\",\n",
     "                                 prompt=text_prompt,\n",
@@ -189,13 +204,13 @@
     "                                 top_p=1, # def=1 (DO NOT use BOTH temperature and top_p)\n",
     "                                 n=1, # def=1 (number of completion)\n",
     "                                 echo = True, # def=False ()\n",
-    "                                 frequency_penalty=1.2, # [-2, 2] def=0 \n",
-    "                                 presence_penalty=0.1) # [-2, 2] def=0"
+    "                                 frequency_penalty=0, # [-2, 2] def=0 \n",
+    "                                 presence_penalty=0) # [-2, 2] def=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "f5674a37",
    "metadata": {
     "scrolled": false
@@ -205,15 +220,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write an essay on me\n",
+      "Write a program that takes in a string of text, and classify the text as positive, negative, or neutral. Use the machine learning python libraries like Tensorflow, pytorch, or sk-learn to write a RNN that accomplishes this task. \n",
       "\n",
-      "My name is Annie and I'm a student at a local community college. I have always had a passion for learning and that's why I choose to pursue higher education. In my free time, you'll often find me outside in nature appreciating the beauty around me or reading a good book. The topics of my books tend to focus on self-development, psychology, and relationships - something which has been very helpful in furthering my own personal growth.\n",
+      "import tensorflow as tf\n",
+      "from tensorflow import keras\n",
+      "import numpy as np\n",
+      "import pandas as pd\n",
       "\n",
-      "I am an advocate for healthy living, both mentally and physically. This commitment came from realizing the power within oneself when striving for balance in life - something that wasn't so natural for me as I was growing up with depression and anxiety. But with time comes healing; now more than ever before, I am passionate about helping others to learn how to take care of their mental health too by publishing posts on Instagram about it regularly as well as offering online counseling sessions through social media videos and live streams once every month - all while still continuing to take care of myself too! \n",
+      "#load the dataset\n",
+      "data = pd.read_csv('sentimentdata.csv')\n",
       "\n",
-      "Sports have also been an integral part of keeping myself emotionally balanced since childhood days; specifically running track & field has taught me essential lessons such as setting goals & pushing through the hurdles associated with reaching them successfully no matter what is thrown your way (literally). This discipline has also provided opportunities outside competition internally during college since joining various leadership roles related to sports organizations on campus (e.g., being president of the Track & Field Club). \n",
+      "#extract the labels\n",
+      "labels = data.iloc[:,0]\n",
+      "input_data = data.iloc[:,1]\n",
       "\n",
-      "Ultimately, being active helps maintain strength inside but also outwards which ultimately gives me energy overall which leads back into achieving academic excellence - something that holds considerable value especially in this day&age due largely supported by hard work throughout high school encouraging proficient skillsets such as extensive research projects related biology attaining knowledge-based mastery along quality discussion-oriented essay writing desired from higher education institutions like mine currently enrolled at today!\n"
+      "#convert labels from strings to integers\n",
+      "labels_int = np.array([1 if label == 'positive' else 0 for label in labels])\n",
+      "\n",
+      "#tokenize the words in the string of text\n",
+      "tokenizer = keras.preprocessing.text.Tokenizer()\n",
+      "tokenizer.fit_on_texts(input_data)\n",
+      "vocab_size = len(tokenizer.word_index) + 1  # Adding 1 because of reserved 0 index\n",
+      "\n",
+      "#encode the words\n",
+      "encoded_data = np.array(tokenizer.texts_to_sequences(input_data))\n",
+      "\n",
+      "#pad the encoded words so that all samples will have the same length\n",
+      "max_length = max([len(sample) for sample in encoded_data])\n",
+      "padded_data = keras.preprocessing.sequence.pad_sequences(encoded_data, maxlen=max_length, padding=\"post\")\n",
+      "\n",
+      "\n",
+      "#split the data into train and test\n",
+      "X_train, X_test, y_train, y_test = train_test_split(padded_data,labels_int,test_size=0.2,random_state=0)\n",
+      "\n",
+      "#Build the model\n",
+      "model = keras.Sequential([\n",
+      "    keras.layers.Embedding(input_dim=vocab_size, \n",
+      "                           output_dim=100, \n",
+      "                           input_length=max_length),\n",
+      "    keras.layers.LSTM(units=128, recurrent_dropout=0.2),\n",
+      "    keras.layers.Dense(1,activation='sigmoid')\n",
+      "])\n",
+      "\n",
+      "#compile the model\n",
+      "model.compile(optimizer='adam',\n",
+      "              loss='binary_crossentropy',\n",
+      "              metrics=['accuracy'])\n",
+      "\n",
+      "#train the model\n",
+      "model.fit(X_train, y_train, epochs=15, batch_size=128)\n",
+      "\n",
+      "#test the model\n",
+      "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
+      "\n",
+      "print('Loss: {}'.format(test_loss))\n",
+      "print('Accuracy: {}'.format(test_acc))\n",
+      "\n",
+      "#make predictions\n",
+      "predictions = model.predict(X_test)\n",
+      "\n",
+      "#classify the string of text\n",
+      "def classifySentiment(str):\n",
+      "  encoded = np.array(tokenizer.texts_to_sequences([str]))\n",
+      "  padded = keras.preprocessing.sequence.pad_sequences(encoded, maxlen=max_length, padding=\"post\")\n",
+      "  prediction = model.predict(padded)\n",
+      "  result = None\n",
+      "  if prediction[0][0] > 0.5:\n",
+      "    result = 'positive'\n",
+      "  else:\n",
+      "    result = 'negative'\n",
+      "  return result\n",
+      "\n",
+      "#test classification\n",
+      "test_string = 'This movie is the best!'\n",
+      "test_result = classifySentiment(test_string)\n",
+      "print(test_result) #prints positive\n"
      ]
     }
    ],
@@ -273,11 +354,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f63ea3d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bellman_equation(arr, k): \n",
+    "    n = len(arr) \n",
+    "  \n",
+    "    # Base cases \n",
+    "    if k == 0 or n == 0: \n",
+    "        return 0\n",
+    "    if n == 1: \n",
+    "        return arr[0][k] \n",
+    "  \n",
+    "    # Recursive call\n",
+    "    return min(bellman_equation(arr, k-1), bellman_equation(arr[0:n-1], k-1) + arr[n-1][k]) \n",
+    "  \n",
+    "# Driver code \n",
+    "arr = [[1, 2, 3], \n",
+    "       [4, 8, 2], \n",
+    "       [1, 5, 3]] \n",
+    "k = 2\n",
+    "print(bellman_equation(arr, k))"
+   ]
   },
   {
    "cell_type": "markdown",
