added comments to notebooks

--- a/GettingStarted--ImageGeneration.ipynb
+++ b/GettingStarted--ImageGeneration.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "69cd2b73",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "bd510dda",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "0192dcc5",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "cbc97af3",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -119,13 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "id": "1f0dd226",
    "metadata": {},
    "outputs": [],
    "source": [
     "### generate images ###\n",
-    "image_prompt = \"christmas lights display. On a big house\"\n",
+    "image_prompt = \"a bowl of fruit. water colors \"\n",
     "\n",
     "possible_sizes = ['256x256', '512x512', '1024x1024']\n",
     "\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "id": "d40cb034",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ImagesGenerated/christmas-lights-display/on-a-big-house/1670972806804167.png\n"
+      "ImagesGenerated/a-bowl-of-fruit/water-colors-/1671081136454425.png\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
    "id": "4d0424e1",
    "metadata": {},
    "outputs": [],
@@ -187,14 +187,6 @@
     "## run this to save the image\n",
     "img.save(fp=save_path_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "664b636e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -207,7 +199,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6bb2e98",
+   "id": "cb8a3cd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2480f58",
    "metadata": {},
    "outputs": [],
    "source": []
