--- a/GettingStarted--TextCompletion.ipynb
+++ b/GettingStarted--TextCompletion.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d44df259",
+   "id": "9cf7b099",
    "metadata": {},
    "source": [
     "## Note: This Text Completion tool can also generate code!!!"
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "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\n"
      ]
     }
    ],
@@ -187,15 +187,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "aacfe50f",
    "metadata": {},
    "outputs": [],
    "source": [
     "### generating text!!! ###\n",
     "\n",
+    "## Note: frequency_penalty and presence_penalty can heavily impact the output. \n",
+    "## also temperature and top_p will change the output (probability selection), remember to only use ONE!\n",
+    "\n",
     "## the prompt text <str>\n",
-    "text_prompt = \"Write a program that takes in a string of text, and classify the text as positive, negative, or neutral. Use the machine learning python libraries like Tensorflow, pytorch, or sk-learn to write a RNN that accomplishes this task. \"\n",
+    "text_prompt = \"why is the shy blue. write scientific explaination that is at least 750 words.\"\n",
     "## runs the prompt text through the AI\n",
     "response = oai.Completion.create(model=\"text-davinci-003\",\n",
     "                                 prompt=text_prompt,\n",
@@ -203,14 +206,14 @@
     "                                 max_tokens=4000, # def=16 (number of characters in response)\n",
     "                                 top_p=1, # def=1 (DO NOT use BOTH temperature and top_p)\n",
     "                                 n=1, # def=1 (number of completion)\n",
-    "                                 echo = True, # def=False ()\n",
-    "                                 frequency_penalty=0, # [-2, 2] def=0 \n",
-    "                                 presence_penalty=0) # [-2, 2] def=0"
+    "                                 echo=True, # def=False ()\n",
+    "                                 frequency_penalty=1.2, # [-2, 2] def=0 \n",
+    "                                 presence_penalty=0.3) # [-2, 2] def=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "f5674a37",
    "metadata": {
     "scrolled": false
@@ -220,81 +223,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write a program that takes in a string of text, and classify the text as positive, negative, or neutral. Use the machine learning python libraries like Tensorflow, pytorch, or sk-learn to write a RNN that accomplishes this task. \n",
+      "why is the shy blue. write scientific explaination that is at least 750 words.\n",
       "\n",
-      "import tensorflow as tf\n",
-      "from tensorflow import keras\n",
-      "import numpy as np\n",
-      "import pandas as pd\n",
+      "The color blue evokes a sense of calmness and serenity, which may explain why it is often associated with the emotion of shyness. This association has been demonstrated in numerous scientific studies, illustrating a strong connection between the color blue and feelings such as tranquility and introversion.\n",
       "\n",
-      "#load the dataset\n",
-      "data = pd.read_csv('sentimentdata.csv')\n",
+      "A study conducted by Ofek (2015) investigated how different colors influence people’s perception of social status, finding that individuals wearing blue tended to be seen as more ‘shy’ than those wearing other colors. Participants were asked to rate photos of individuals dressed in either red or blue on various scales related to measures such as introversion-extroversion, dominance-submissiveness, aggressiveness-passivity, stimulation seeking-avoidance etc., with results indicating that individuals wearing blue were viewed by peers as being shyer than those dressed in red. \n",
+      "Ofek's findings are further substantiated by research carried out by Jacobs (2018), who found that when participants wore light shades of blues they experienced an increase in introverted behavior compared to when they wore warmer shades or non-blue hues. The study involved asking participants to engage in a series of activities while their emotions were monitored; the results revealed an increased level of emotional reticence among those who had donned the lighter blues which was not present among participants sporting other colored garments. Jacobs' conclusion was that there is indeed something “magical” about light shades of blues which can prompt us into feeling more shy or withdrawn from social situations due its calming effect on our psyche – this could have implications for fields such as fashion psychology where understanding how certain colors affect our emotions can help improve mental wellbeing through what we wear every day! \n",
       "\n",
-      "#extract the labels\n",
-      "labels = data.iloc[:,0]\n",
-      "input_data = data.iloc[:,1]\n",
+      "Further evidence supporting link between the color blue and feelings associated with shyness can be drawn from neuroimaging studies using brain scanning technology; specifically fMRI brain scans used very small magnetic fields generated inside a person's head whilst he/she looks at different colored images (Lewis & Mallet 2014). The fMRI results showed activation patterns within certain areas including regions linked with fear responses whenever an image containing bluish tints was shown - suggesting these regions form part your brain dedicated to processing emotional reactions towards particular visual stimuli like colors – this proof provides strengthened validity for previous claims linking shyness and the color blue!     \n",
+      " \n",
+      " So far we have touched upon many convincing arguments why one might associate mild forms of reticence with depictions saturated entirely within tones weighing mildly toward cyanobacterium wavelength properties i.e.: blueness! Now I would like discuss what is known about evolutionary underpinnings behind this trait: How do species evolve their preferences? And does biological background predetermine pacesetter positions amidst populations' performances?    \n",
       "\n",
-      "#convert labels from strings to integers\n",
-      "labels_int = np.array([1 if label == 'positive' else 0 for label in labels])\n",
+      "A recent review paper published in Trends In Neuroscience suggested possible explanations regarding why some animals ebb away from confrontation whereas others burst forward into central arenas - authors sought physiological factors subtly impacting cognitive capacities making up particular proclivities existing amongst population members spanning domains eukaryotic worlds contain (Kohl 2018). One prime target speculated revolved around role oxytocin served playing coaxing opposed behavioral extremes along spectrum socially acceptable conduct expectations shouldering representational vocabularies pertains coded instruction architectures emotionally meaningful valances inhabit habitats infinitely pleasant dreams reside... Kohl proposed release naturally occurring peptide granting recipients tendencies extraordinary inwardly directed outlooks mediated biochemical allocations eventually inducing quiescent embodiments confidentially canvassing public spotlight sphere makeover projects liberate inhibitions contributing catalysts coerce psychological aberrations becoming commonplace norm rank order arrangements self--esteem tend bearing gifts replete potentiality always deserves special place all hearts beating properly - fascinating stuff right?!  \n",
       "\n",
-      "#tokenize the words in the string of text\n",
-      "tokenizer = keras.preprocessing.text.Tokenizer()\n",
-      "tokenizer.fit_on_texts(input_data)\n",
-      "vocab_size = len(tokenizer.word_index) + 1  # Adding 1 because of reserved 0 index\n",
-      "\n",
-      "#encode the words\n",
-      "encoded_data = np.array(tokenizer.texts_to_sequences(input_data))\n",
-      "\n",
-      "#pad the encoded words so that all samples will have the same length\n",
-      "max_length = max([len(sample) for sample in encoded_data])\n",
-      "padded_data = keras.preprocessing.sequence.pad_sequences(encoded_data, maxlen=max_length, padding=\"post\")\n",
-      "\n",
-      "\n",
-      "#split the data into train and test\n",
-      "X_train, X_test, y_train, y_test = train_test_split(padded_data,labels_int,test_size=0.2,random_state=0)\n",
-      "\n",
-      "#Build the model\n",
-      "model = keras.Sequential([\n",
-      "    keras.layers.Embedding(input_dim=vocab_size, \n",
-      "                           output_dim=100, \n",
-      "                           input_length=max_length),\n",
-      "    keras.layers.LSTM(units=128, recurrent_dropout=0.2),\n",
-      "    keras.layers.Dense(1,activation='sigmoid')\n",
-      "])\n",
-      "\n",
-      "#compile the model\n",
-      "model.compile(optimizer='adam',\n",
-      "              loss='binary_crossentropy',\n",
-      "              metrics=['accuracy'])\n",
-      "\n",
-      "#train the model\n",
-      "model.fit(X_train, y_train, epochs=15, batch_size=128)\n",
-      "\n",
-      "#test the model\n",
-      "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
-      "\n",
-      "print('Loss: {}'.format(test_loss))\n",
-      "print('Accuracy: {}'.format(test_acc))\n",
-      "\n",
-      "#make predictions\n",
-      "predictions = model.predict(X_test)\n",
-      "\n",
-      "#classify the string of text\n",
-      "def classifySentiment(str):\n",
-      "  encoded = np.array(tokenizer.texts_to_sequences([str]))\n",
-      "  padded = keras.preprocessing.sequence.pad_sequences(encoded, maxlen=max_length, padding=\"post\")\n",
-      "  prediction = model.predict(padded)\n",
-      "  result = None\n",
-      "  if prediction[0][0] > 0.5:\n",
-      "    result = 'positive'\n",
-      "  else:\n",
-      "    result = 'negative'\n",
-      "  return result\n",
-      "\n",
-      "#test classification\n",
-      "test_string = 'This movie is the best!'\n",
-      "test_result = classifySentiment(test_string)\n",
-      "print(test_result) #prints positive\n"
+      "In conclusion: It appears quite clear there exists strong scientific support attesting presence tangible correlation subsists between hue radiating melancholic vibes powering down motors generating electricity sources stoking engines running attraction pulling gravitationally magnetized phenomena mutually recognized innately understood associative networks accruing defining characteristics synthesized holistic systems fusing personality dynamics inclusive emotive range captivatingly assembled compact packages generally interpreted aesthetic beauty style masterfully craftily composed colour symphonies belong musical compositions capable transferring energies corresponding expressions solemnly courageous vibrations daring defy convention proposing origin theories explaining origins expression shared universally harmoniously transcending boundaries structures limitations limiting otherwise infinite possibilities illuminating creative genius residing each persons' soul awaiting discovery liberation fulfilling destinies purpose driven lives composed primarily internally propelled motivations devotions working humanist endeavors benefit entire collective whole hence endeth lesson adventures enjoyed gleaning applicable insights gleaned deliberation shall continue journey undertaken exploration takes lead cautiously wise embracing thrill ride awaits look forward future hold great many surprises mysteries unhurried prepare vistas unknown cradling incisive curiosity everlastingly mindfully enjoy!!\n"
      ]
     }
    ],
@@ -305,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "e02cf2e3",
    "metadata": {},
    "outputs": [
@@ -313,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TextGenerated/write-an-essay-on-me/1670971163574475.txt\n"
+      "TextGenerated/why-is-the-shy-blue/write-scientific-explaination-that-is-at-least-750-words//1671082252189980.txt\n"
      ]
     }
    ],
@@ -342,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "7a98947b",
    "metadata": {},
    "outputs": [],
@@ -354,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f63ea3d0",
    "metadata": {},
    "outputs": [
@@ -367,6 +309,8 @@
     }
    ],
    "source": [
+    "## an example output from: \n",
+    "## Write a recursive algorithm that effieicently computes a general bellman equation. Write your code in Python\n",
     "def bellman_equation(arr, k): \n",
     "    n = len(arr) \n",
     "  \n",
@@ -428,7 +372,28 @@
     "\n",
     "In addition, our Monestary hosts retreats and workshops throughout the year. Get up close and personal with our gentle giants to learn about the wisdom they can impart.\n",
     "\n",
-    "At the Monestary of the Giant Turtles, we hope you arrive as a guest and leave as a friend – surrounded by peace, joy, and a newfound connection to nature.\n"
+    "At the Monestary of the Giant Turtles, we hope you arrive as a guest and leave as a friend – surrounded by peace, joy, and a newfound connection to nature.\n",
+    "\n",
+    "\n",
+    "-------------------------\n",
+    "\n",
+    "factor a cubic polynomial. Show your work.\n",
+    "\n",
+    "Given: $x^3 + 5x^2 + 8x + 4$\n",
+    "\n",
+    "Factor: $(x + 4)(x^2 + x + 1)$\n",
+    "\n",
+    "Work:\n",
+    "$x^3 + 5x^2 + 8x + 4$\n",
+    "\n",
+    "$= x^3 + 4x^2 + x^2 + 5x + 8x + 4$\n",
+    "\n",
+    "$= x^2(x + 4) + x(x + 5) + 4$\n",
+    "\n",
+    "$= x^2(x + 4) + x(x + 5) + (x + 4)(1)$\n",
+    "\n",
+    "$= (x + 4)(x^2 + x + 1)$\n",
+    "\n"
    ]
   },
   {
