added comment on setting keys

--- a/GettingStarted--ImageGeneration.ipynb
+++ b/GettingStarted--ImageGeneration.ipynb
@@ -71,6 +71,8 @@
    "source": [
     "## configurations: go to your openai account to generate a KEY!\n",
     "## Note: there is a better way to do this...but this way is easy.\n",
+    "## the better way is to set your inevironment variable on you machine\n",
+    "## On Mac/Linux: export OPENAI_API_KEY=\"YOUR_KEY\"\n",
     "\n",
     "## put your YOUR_API_KEY here (use ref [5] link to get your api key)\n",
     "## Note: you need to create a openaiaccount to use this api.\n",
@@ -199,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb8a3cd4",
+   "id": "1ced708d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -207,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2480f58",
+   "id": "852536a8",
    "metadata": {},
    "outputs": [],
    "source": []
