--- a/GettingStarted--TextCompletion.ipynb
+++ b/GettingStarted--TextCompletion.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf7b099",
+   "id": "bfb1ecd3",
    "metadata": {},
    "source": [
     "## Note: This Text Completion tool can also generate code!!!"
@@ -76,6 +76,8 @@
    "source": [
     "## configurations: go to your openai account to generate a KEY!\n",
     "## Note: there is a better way to do this...but this way is easy.\n",
+    "## the better way is to set your inevironment variable on you machine\n",
+    "## On Mac/Linux: export OPENAI_API_KEY=\"YOUR_KEY\"\n",
     "\n",
     "## put your YOUR_API_KEY here (use ref [5] link to get your api key)\n",
     "## Note: you need to create a openai account to use this api.\n",
